GNOME Bugzilla – Bug 697003
keybindings: Fix ungrabbing of keys
Last modified: 2013-04-10 08:59:37 UTC
I didn't bisect but this probably stopped working with the switch to XI2.
Created attachment 240263 [details] [review] keybindings: Fix ungrabbing of keys XUngrabKey() doesn't work for XI2 grabs and XI2 doesn't provide API with similar functionality. As such, we have to refactor the code a bit to be able to call XIUngrabKeycode() for each key binding, then reload keybindings and finally grab the new ones.
Review of attachment 240263 [details] [review]: Makes sense to me.
Attachment 240263 [details] pushed as c7dc692 - keybindings: Fix ungrabbing of keys